--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/styl.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <header class="header">
-                    <div class="row">
-                        <div class="col-12">
-                            <a class="logo" href="#">URLAUBSGLÜCK</a>
-                        </div>
-                        <div class="col-12">
-                            <nav>
-                                <a class="login" href="#">Log in</a>
-                                <a class="Sing-up" href="#">Sing up</a>
-                            </nav>
-                        </div>
-                    </div>
-                </header>
-            </div>
+    <div class="wraper">
 
-        </div>
+        <header class="header container">
+            <div class="container">
+                <div class="row flex-wrap-reverse flex-md-row justify-content-md-between align-items-center ">
+                    <div class="col-12 col-md-4">
+                        <logo><a class="logo" href="#">URLAUBSGLÜCK</a></logo>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <nav class="login-list">
+                            <a class=" login " href="# ">Log in</a>
+                            <a class="Sing-up " href="# ">Sing up</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
     </div>
+
+
 </body>
 
 </html>
