--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <header class="header container">
             <div class="container">
-                <div class="row flex-wrap-reverse flex-md-row justify-content-md-between align-items-center ">
+                <div class="row flex-wrap-reverse flex-sm-row justify-content-sm-between align-items-center ">
                     <div class="col-12 col-md-4">
                         <logo><a class="logo" href="#">URLAUBSGLÜCK</a></logo>
                     </div>
@@ -33,6 +33,11 @@
                 </div>
             </div>
         </header>
+        <section class="holiday-dreams">
+            <div class="eclipse">
+
+            </div>
+        </section>
     </div>
 
 
