--- a/index.html
+++ b/index.html
@@ -11,33 +11,97 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap-grid 1.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="wraper">
-
         <header class="header container">
-            <div class="container">
-                <div class="row flex-wrap-reverse flex-sm-row justify-content-sm-between align-items-center ">
-                    <div class="col-12 col-md-4">
-                        <logo><a class="logo" href="#">URLAUBSGLÜCK</a></logo>
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <nav class="login-list">
-                            <a class=" login " href="# ">Log in</a>
-                            <a class="Sing-up " href="# ">Sing up</a>
-                        </nav>
-                    </div>
+            <div class="row flex-wrap-reverse flex-md-row justify-content-md-between align-items-center ">
+                <div class="col-12 col-md-4">
+                    <logo><a class="logo justify-content-lg-start" href="#">URLAUBSGLÜCK</a></logo>
+                </div>
+                <div class="col-12 col-md-4">
+                    <nav class="login-list justify-content-lg-end ">
+                        <a class=" login " href="# ">Log in</a>
+                        <a class="Sing-up " href="# ">Sing up</a>
+                    </nav>
                 </div>
             </div>
         </header>
-        <section class="holiday-dreams">
-            <div class="eclipse">
+        <main>
+            <section class="holiday-dreams">
+                <div class="eclipse">
 
-            </div>
-        </section>
+                    <div class="wrap-holiday-dreams">
+
+                        <h2 class="title">share your holiday dreams</h2>
+                        <span class="title-span">And find the perfect partner to fullfill it</span>
+                        <button class="find">Find your holiday partner</button>
+
+
+                    </div>
+
+
+
+
+                </div>
+
+            </section>
+            <section class="partner ">
+                <div class="container">
+                    <div class="partner row partner-title-wrap">
+                        <div class="col-12">
+                            <h2 class="partner-title">Meet a partner for your best holiday</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="container parner-block">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-3 parner-cart">
+                            <div class="partner-item">
+                                <div class="partner-img-wrap first-person">
+                                    <img class="partner-img" src="img/1.jpg" alt="kartinka1" width="120px" height="120px">
+                                </div>
+                                <h3 class="partner-name">Bradley Hunter</h3>
+                                <p class="partner-abuot">Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 parner-cart">
+                            <div class="partner-item">
+                                <div class="partner-img-wrap second-person">
+                                    <img class=" partner-img " src="img/3.jpg " alt="kartinka2 " width="120px " height="120px ">
+                                </div>
+                                <h3 class="partner-name ">Lucas Marsha</h3>
+                                <p class="partner-abuot ">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 parner-cart">
+                            <div class="partner-item">
+                                <div class="partner-img-wrap third-person ">
+                                    <img class="partner-img " src="img/2.jpg " alt="kartinka3 " width="120px " height="120px ">
+                                </div>
+                                <h3 class="partner-name ">Heather Walker</h3>
+                                <p class="partner-abuot ">I'm a happy person that loves cats and climbing on mountains.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 parner-cart">
+                            <div class="partner-item">
+                                <div class="partner-img-wrap fourth-person">
+                                    <img class="partner-img " src="img/4.jpg " alt="kartinka4 " width="120px " height="120px ">
+                                </div>
+                                <h3 class="partner-name ">Bradley Hunter</h3>
+                                <p class="partner-abuot ">Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="find button-partners">See other partners</button>
+
+            </section>
+        </main>
     </div>
 
 
